@@ -1,4 +1,3 @@
-
 // This code implementation is the intellectual property of
 // the GEANT4 collaboration.
 //
@@ -6,19 +5,13 @@
 // based on the Program) you indicate your acceptance of this statement,
 // and all its terms.
 //
-// $Id: ProcessesCount.hh,v 1.3 1999-12-15 14:48:56 gunter Exp $
+// $Id: ProcessesCount.hh,v 1.4 2001-03-08 14:57:43 maire Exp $
 // GEANT4 tag $Name: not supported by cvs2svn $
 //
-// 
-// -----------------------------------------------------------------
-//	GEANT 4 class header file 
-//
-//	For information related to this code contact:
-//	CERN, CN Division, ASD group
-//
-//      ------------------- class ProcessesCount -----------------
-//
-// 26-10-98: first version, M.Maire
+//....oooOO0OOooo........oooOO0OOooo........oooOO0OOooo........oooOO0OOooo....
+
+// 08.03.01 Hisaya: adapted for STL   
+// 26.10.98 mma   : first version
 
 //....oooOO0OOooo........oooOO0OOooo........oooOO0OOooo........oooOO0OOooo....
 //....oooOO0OOooo........oooOO0OOooo........oooOO0OOooo........oooOO0OOooo....
@@ -27,7 +20,7 @@
 #define ProcessesCount_HH
 
 #include "globals.hh"
-#include "g4rw/tpordvec.h"
+#include "g4std/vector"
 
 //....oooOO0OOooo........oooOO0OOooo........oooOO0OOooo........oooOO0OOooo....
 
@@ -56,6 +49,12 @@ private:
 //....oooOO0OOooo........oooOO0OOooo........oooOO0OOooo........oooOO0OOooo....
 
 
-typedef G4RWTPtrOrderedVector<OneProcessCount> ProcessesCount;
+typedef G4std::vector<OneProcessCount*> ProcessesCount;
 
 #endif
+
+
+
+
+
+
